# instiki2git

./: LICENSE  README.md  config.ini  instiki2git.py  percent_code.py  setup.cfg  setup.py
src/: cli.py  general.py  git_tools.py  percent_code.py
