[metadata]
name = instiki2git
version = 0.1
description = A tool for exporting an Instiki installation to a git repository.
license = MIT
author = adeel
author_email = adeel@yusufzai.me

[options]
package_dir =
    instiki2git = src
python_requires = ~=3.9
install_requires =
    PyMySQL
    dulwich
    click
    requests
    configparser

[options.entry_points]
console_scripts =
    instiki2git = instiki2git.cli:cli
    instiki2git-html = instiki2git.cli:cli_html
