[metadata]
name = instiki2git
version = 0.1
description = A tool for exporting an Instiki installation to a git repository.
license = MIT
author = adeel
author_email = adeel@yusufzai.me

[options]
packages = instiki2git
package_dir =
    instiki2git = src
python_requires = ~=3.9
install_requires =
    PyMySQL
    dulwich
    click
    requests
    configparser

[options.entry_points]
console_scripts =
    instiki2git = instiki2git.cli:cli

[flake8]
ignore =
    ## Not convinced at all.

    # Whitespace around assignment symbol for keyword arguments.
    # Expression on the right can contain whitespaces,
    # so whitespace around assignment symbol should be the default.
    E251,

    ## Not convinced in all cases.

    # For assert-like negated if-statements, our pattern is to have "not" at the top-level:
    # > if not <assert condition>:
    # >     raise <error>
    # This should be used also if <assert condition> is "<item> in <collection>".
    # But E713 would force "if <item> not in <collection>", contrary to the above pattern.
    # Similarly for E714 with "is not".
    E713,
    E714,

    # This enforces two blank lines between top-level function and class definitions.
    # This makes sense for modules with big classes or long, nested functions.
    # But it does not make sense for utility modules with lots of related small top-level functions.
    # It is also a problem with function definitions that have some related assignments before them.
    E302,
    E305,

    ## Too many false positives.

    # Whitespace after '#' before textual comment.
    # Don't want to have this whitespace for commented out code.
    E265,
max-line-length = 120
